--- a/Algorithmic/2.1.0 static有什么用途？（请至少说明两种）_2019.08.23.md
+++ b/Algorithmic/2.1.0 static有什么用途？（请至少说明两种）_2019.08.23.md
@@ -12,3 +12,167 @@
 1. 有区别。全局变量保存在内存的全局存储区中，占用静态的存储单元；
 1. 局部变量保存在栈中，只有在所在函数被调用时才动态地为变量分配存储单元。
 
+2.1.4 什么是平衡二叉树？
+1. 平衡二叉树就是每个节点的子树的高度差不超过1的二叉树 
+
+2.1.5 堆栈溢出一般是由什么原因导致的？
+
+2.1.5 堆栈溢出一般是由什么原因导致的？
+2.1.6 什么函数不能声明为虚函数？
+2.1.7 冒泡排序算法的时间复杂度是什么？
+2.1.8 写出float x 与“零值”比较的if语句
+2.1.9 Internet采用哪种网络协议？该协议的主要层次结构？
+2.2.0 Internet物理地址和IP地址转换采用什么协议？
+2.2.1 IP地址的编码分为哪俩部分？
+2.2.2 用户输入M,N值，从1至N开始顺序循环数数，每数到M输出该数值，直至全部输出。写出C程序。
+2.2.3 不能做switch()的参数类型是
+2.2.4 int A[nSize]，其中隐藏着若干0，其余非0整数，写一个函数int Func(int* A, int nSize)，使A把0移至后面，非0整数移至数组前面并保持有序，返回值为原数据中第一个元素为0的下标。
+2.2.5 写一个程序, 要求功能：求出用1，2，5这三个数不同个数组合的和为100的组合个数
+2.2.6 实现一个函数，把一个字符串中的字符从小写转为大写
+2.2.7 随机输入一个数，判断它是不是对称数（回文数）（如3，121，12321，45254）。不能用字符串库函数
+2.2.8 求2~2000的所有素数.有足够的内存,要求尽量快
+2.2.9 A,B,C,D四个进程，A向buf里面写数据，B,C,D向buf里面读数据，当A写完，且B，C，D都读一次后，A才能再写。用P，V操作实现。
+2.3.0 将单向链表reverse，如ABCD变成DCBA，只能搜索链表一次。
+2.3.1 将二叉树的两个孩子换位置，即左变右，右变左。不能用递规。
+2.3.2 以下属于物理层的设备是？
+2.3.3 在以太网中，是根据（）地址来区分不同的设备的？
+2.3.4 以下为传输层协议的是？
+2.3.5 以下对MAC地址描述正确的是？
+2.3.6 以下属于数据链路层功能的是？
+2.3.7 IEEE802.3u标准是指？
+2.3.8 如果要将两计算机通过双绞线直接连接，正确的线序是？
+2.3.9 在V.35和V.24规程中，控制信号RTS表示？
+2.4.0 路由器作为网络互连设备，必须具备以下哪些特点？
+2.4.1 路由器的作用有？
+2.4.2 调用上一条历史命令的快捷键是？
+2.4.3 交换机工作在OSI七层的哪一层？
+2.4.4 以下对CSMA/CD描述正确的是？
+2.4.5 以下对STORE ANDFORWARD描述正确的是？
+2.4.6 以下对交换机工作方式描述正确的是？
+2.4.7 VLAN的主要作用有？
+2.4.8 在交换机中用户权限分为几个级别？
+2.4.9 在路由器的配置过程中查询以S开头所有命令的方法是？
+2.5.0 第一次配置路由器时可以使用的方法为？
+2.5.1 在何种状态下可以为路由器改名？
+2.5.2 某公司申请到一个C类IP地址，但要连接6个的子公司，最大的一个子公司有 26台计算机，每个子公司在一个网段中，则子网掩码应设为？
+2.5.3 与10.110.12.29mask 255.255.255.224属于同一网段的主机IP地址是？
+2.5.4 ARP协议的作用是？
+2.5.5 当路由器接收的IP报文的TTL值等于1时，采取的策略是？
+2.5.6 在NetWare 网络中，客户需要访问某个类型的服务器时，首先要发送一个 （）广播报文来寻找服务器？
+2.5.7 IPX地址网络地址有（ ）个字节？
+2.5.8 对于帧中继描述正确的是？
+2.5.9 对于INVERSE ARP的描述正确的是？
+
+3.1.0 在函数内定义一个字符数组，用gets函数输入字符串的时候，如果输入越界，为什么程序会崩溃？
+3.1.1 C++中引用与指针的区别
+3.1.2 C/C++程序的内存分区
+3.1.3 快速排序的思想、时间复杂度、实现以及优化方法
+3.1.4 IO模型——IO多路复用机制?
+3.1.5 常用的Linux命令
+3.1.6 C中变量的存储类型有哪些？
+3.1.7 动态规划的本质
+3.1.8 实践中如何优化MySQL?
+3.1.9 什么情况下设置了索引但无法使用?
+3.2.0 SQL语句的优化
+3.2.1 数据库索引的底层实现原理和优化
+3.2.2 HTTP和HTTPS的主要区别?
+3.2.3 如何设计一个高并发的系统?
+3.2.4 两条相交的单向链表，如何求他们的第一个公共节点?
+3.2.5 求单向局部循环链表的环入口?
+3.2.6 IP地址如何在数据库中存储?
+3.2.7 new/delete和malloc/free的底层实现?
+3.2.8 overload、override、overwrite的介绍?
+3.2.9 小端/大端机器?
+3.3.0 守护进程
+3.3.1 多线程的优缺点
+3.3.2 长连接与短连接
+3.3.3 二分图应用于最佳匹配问题（游客对房间的满意度之和最大问题）
+3.3.4 class与struct的区别？
+3.3.5 虚函数和纯虚函数
+3.3.6 menset()函数
+3.3.7 实现一个函数，对一个正整数n，算得到1需要的最少操作次数。操作规则为：如果n为偶数，将其除以2；如果n为奇数，可以加1或减1；一直处理下去。
+3.3.8 找到满足条件的数组
+3.3.9 一个大的含有50M个URL的记录，一个小的含有500个URL的记录，找出两个记录里相同的URL
+3.4.0 海量日志数据，提取出某日访问百度次数最多的那个IP
+3.4.1 有10个文件，每个文件1G，每个文件的每一行都存放的是用户的query，每个文件的query都可能重复。如何按照query的频度排序？
+3.4.2 蚂蚁爬杆问题
+3.4.3 当在浏览器中输入一个url后回车，后台发生了什么？比如输入url后，你看到了百度的首页，那么这一切是如何发生的呢？
+3.4.4 判断两棵树是否相等，请实现两棵树是否相等的比较，相等返回1，否则返回其他值，并说明算法复杂度
+3.4.5 三个警察和三个囚徒的过河问题
+3.4.6 从300万字符串中找到最热门的10条
+3.4.7 如何找出字典中的兄弟单词。给定一个单词a，如果通过交换单词中字母的顺序可以得到另外的单词b，那么定义b是a的兄弟单词。现在给定一个字典，用户输入一个单词，如何根据字典找出这个单词有多少个兄弟单词？
+3.4.8 找出数组中出现次数超过一半的数，现在有一个数组，已知一个数出现的次数超过了一半，请用O(n)的复杂度的算法找出这个数。
+3.4.9 找出被修改过的数字
+3.5.0 设计DNS服务器中cache的数据结构。要求设计一个DNS的Cache结构，要求能够满足每秒5000以上的查询，满足IP数据的快速插入，查询的速度要快。（题目还给出了一系列的数据，比如：站点数总共为5000万，IP地址有1000万，等等）
+3.5.1 找出给定字符串对应的序号
+3.5.2 找出第k大的数字所在的位置。写一段程序，找出数组中第k大小的数，输出数所在的位置。例如{2，4，3，4，7}中，第一大的数是7，位置在4。第二大、第三大的数都是4，位置在1、3随便输出哪一个均可。
+3.5.3 给40亿个不重复的unsigned int的整数，没排过序的，然后再给几个数，如何快速判断这几个数是否在那40亿个数当中?
+3.5.4 在一个文件中有10G个整数，乱序排列，要求找出中位数。内存限制为2G。
+3.5.5 时分秒针在一天之类重合多少次？（24小时）
+3.5.6 将多个集合合并成没有交集的集合。
+3.5.7 平面内有11个点，由它们连成48条不同的直线，由这些点可连成多少个三角形？
+
+6.1.0 5个人去一个海岛寻宝，最后一共找到了100枚金币。他们约定了一个分配方案。
+6.1.1 给你一个有序整数数组，数组中的数可以是正数、负数、零，请实现一个函数，这个函数返回一个整数：返回这个数组所有数的平方值中有多少种不同的取值。
+6.1.2 一个环有10个节点，编号0-9。从0点出发，走N步又能回到0点，共有多少种走法？
+6.1.3 一个乱序数组，求第K大的数。排序方式使用字典序。
+6.1.4 一棵二叉树，求最大通路长度。（即最大左右子树高度之和）
+6.1.5 进程和线程的区别，使用线程真的能节省时间？
+6.1.6 go协程的调度方式，使用协程真的能节省时间？
+6.1.7 水平触发边沿触发的区别？在边沿触发下，一个socket有500的数据，已读取200然后不再处理，是不是剩下的300就永远无法读取？
+6.1.8 有函数如下，输入1，返回什么？
+6.1.9 设计http协议，A端发送 AAAA，至少让B端知道AAAA已发送完成。
+6.2.0 流量总入口为api_gateway，api_gateway挂了会导致全部挂挂，用什么机制增大可用性？
+6.2.1 mysql为什么要用b+树，不用平衡二叉树做索引结构？
+6.2.2 创建数据库索引应该怎么考虑？
+6.2.3 使用int 做primary key和使用string 有什么优劣？
+6.2.4 数据库分表的方法？
+6.2.5 表结构，订单纪录如下，写一个语句，求卖的最好的 top 10 product_id。
+6.2.6 微服务，A服务请求B服务B1接口，B1接口又请求A服务A2接口。会不会有问题？
+6.2.7 不使用高级工具，只使用Linux自带的工具，你会如何debug?
+6.2.8 如何预估一个mysql语句的性能？
+6.2.9 go函数中，返回值未命名，发生了panic，但是在函数内recover了。函数返回什么值？
+6.3.0 socket中，在tcp协议层面，数据分为10个报文发放。1-7次很顺利，第8次丢失。这次通信一定失败吗？如果第8次数据会重发，那在接收端是不是：先读取到1-7次的数据，然后读取到8-10次的数据?还是9-10次的数据会先到达？
+6.3.1 free -h，buffers 和cached有什么不同
+6.3.2 后台进程有什么特点，如果要你设计一个进程是后台进程，你会考虑什么
+6.3.3 僵尸进程是什么，如果产生一个僵尸进程，如何查找僵尸进程
+6.3.4 孤儿进程是什么
+6.3.5 一个进程有20个线程，在某个线程中调用fork，新的进程会有20个线程吗？
+6.3.6 tcp/ip 流量控制和拥塞控制
+6.3.7 301/302有什么区别？应用上有什么异同。
+6.3.8 50X相关错误码的内涵是什么？
+6.3.9 close wait和time wait是什么？如何排查？有什么意义？
+6.4.0 http req和resp的中数据有哪些
+6.4.1 什么是连接的半打开，半关闭状态
+6.4.2 假如一个业务依赖单点redis，此redis故障将导致业务不可用，如何改进
+6.4.3 redis sharding有哪些做法
+6.4.4 当大量数据要求用redis保存，单机单点难以满足需要，设计（换寻找）一个负载均衡的方案
+6.4.5 当redis 采用hash做sharding，现在有8个节点，负载方案是 pos = hash(key) % 8，然后保存在pos节点上。这样做有什么好处坏处？当8个节点要扩充到10个节点，应该怎么办？有什么更方便扩充的方案吗？（一致性hash, presharding）
+6.4.6 如何保证redis和数据库数据的一致性。比如用户名既保存在数据库，又保存在redis做缓存。有如下操作 update_db(username); update_redis(username)。但是执行update_db后故障，update_redis没有执行。有什么简单办法解决这个问题。
+
+7.1.0 B+树、B-树的区别?
+7.1.1 数据库隔离级别，幻读和不可重复读的区别？
+7.1.2 有hell, well, hello, world等字符串组，现在问能否拼接成helloworld，代码实现。
+7.1.3 快排算法实现
+7.1.4 线程安全的单例模式
+7.1.5 25匹马赛跑，有一个赛场，只有五个赛道，没有计时器，只能通过目测来记录快慢，求出第三3快的马要多少场比赛？
+7.1.6 kmp算法next数组的求解思路
+7.1.7 数组中有三个数字出现超过3/4，求这三个数字？
+7.1.8 1到n+2个数组中缺了两个数，如何用O(n)时间，O(1)空间找到这两个数字。
+7.1.9 一条线段长为1，随机选两个点，将改线段分为三段，三段能成三角形的概率是多少？
+7.2.0 有一个教授，他三个学生，脑袋背后分别各写了一个数字，其中一个数字是另外两个数字的和，经过几轮后，有一个学生猜出了自己的数字请问是什么原因？
+7.2.1 B+树做索引时，B+树通常高度为多少层？要参考哪些条件？
+
+8.1.0 一般sql注入怎么发现触点的，从源码阐述sqlmap如何测试注入点的。
+8.1.1 masscan扫描端口时靠什么检测，为什么这么快? 请详述.
+8.1.2 你写过哪些小工具，你为你使用过的工具做过什么修改.
+8.1.3 如何提高采用python编写的扫描速度，谈谈对GIL锁的了解.
+8.1.4 你觉得你发现的那个漏洞影响比较大.
+8.1.5 常见的web漏洞有哪些.
+8.1.6 有没有玩过硬件安全，研究程度如何.
+8.1.7 反爬虫，如果是你如何进行反爬虫，如何绕过反爬措施。 使用无头浏览器被检测到了，如何绕过
+8.1.8 nmap扫描如何进行扫描。发包与协议，握手和不握手，哪些协议握手，哪些不握手. 如何不直接接触目标服务器探测对方端口是否开放
+8.1.9 有没有自己编写过yara扫描模块，如果要解决扫描{k1:v1, k2:v2, k3:v3} ，保证同时在k1中的v1里出现特定值，k2中出现v2特定值，以及k3,v3。怎么实现
+8.2.0 xss什么原理，如何自己实现一个beef类似的xss平台. 既然这样实现，面临的跨域如何解决?
+8.2.1 ip 频率限制, ip信誉度模型？
+8.2.2 SCTP协议是什么？如何使用 SCTP 优化网络？
