--- a/02.两数相加_20190825.md
+++ b/02.两数相加_20190825.md
@@ -67,3 +67,5 @@
 
 - 开始刷LeetCode，希望一起学习
 [LeetCode github](https://github.com/Aver58/LeetCode)
+>- 做题不是目的，目的是通过做题锻炼思维、掌握常用的算法。
+>- 不要做过了就忘了，要变成自己的。
