--- a/Interview/Interview/3D数学.md
+++ b/Interview/Interview/3D数学.md
@@ -1,3 +1,8 @@
 1. 向量的点乘，向量的叉乘以及向量归一化的几何意义？
->- 点乘的几何意义是：计算两个向量之间的夹角，以及在某一方向上的投影；
+>- 点乘的几何意义是：计算两个向量之间的夹角，以及在某一方向上的投影；归一化两向量的点乘值越接近于1，两向量的方向一致性越高
 >- 叉乘的几何意义是：创建垂直于平面，三角形，或者多边形的向量； 
+
+1. 请简述矩阵相乘的意义以及注意点。
+
+1. 请简述四元数的作用以及四元数相对欧拉角的优点。
+>- 四元旋转不存在万向节锁问题。存储空间小，计算效率高。
