--- a/Interview/Interview/图形学渲染.md
+++ b/Interview/Interview/图形学渲染.md
@@ -1,2 +1,11 @@
-1. 什么是渲染管道？
-[](http://www.shouhuola.com/q-11708.html)
+1. [什么是渲染管道？](http://www.shouhuola.com/q-11708.html)
+1. 写光照计算中的diffuse的计算公式
+>- 实际光照强度 I= 环境光(Iambient) + 漫反射光(Idiffuse) + 镜面高光(Ispecular)；
+>- 环境光：Iambient= Aintensity* Acolor； (Aintensity表示环境光强度，Acolor表示环境光颜色)
+>- 漫反射光：Idiffuse = DintensityDcolorN.L；(Dintensity表示漫反射强度，Dcolor表示漫反射光颜色，N为该点的法向量，L为光源向量)
+>- 镜面反射光：Ispecular = SintensityScolor(R.V)^n；(Sintensity表示镜面光照强度，Scolor表示镜面光颜色，R为光的反射向量，V为观察者向量，n称为镜面光指数)
+
+5. 三个重要的空间变换矩阵？作用？
+>- Model matrix 模型矩阵。进行从物体坐标到世界坐标的转换。控制了物体的平移、旋转、缩放。在3D建模软件中为模型坐标，导入游戏后使用model matrix 进行大小、位置、角度的设置
+>- View matrix 观察矩阵。将世界坐标系变换到观察者坐标系，通过一些列平移、旋转的组合来移动整个场景（而不是移动摄像机，摄像机 是一个虚拟概念，事实上代码中并没有摄像机camera，而是用view matrix来表示摄像机，然后把view matrix附加到每一个物体，来模拟摄像机），用来模拟一个摄像机
+>- projection matrix 投影矩阵。将观察者坐标系转换到裁剪坐标系。将3D坐标投影到2D屏幕上，裁剪空间外的顶点会被裁剪掉，投影矩阵指定了坐标的范围。
