--- a/Interview/Interview/设计模式.md
+++ b/Interview/Interview/设计模式.md
@@ -4,3 +4,8 @@
 >- 里氏替换原则：子类必须能够替换其基类
 >- 依赖倒置原则：依赖于抽象
 >- 接口隔离原则：使用多个小的专门的接口，而不要使用一个大的总接口。
+
+1. 简述一下对象池原理。什么情况下使用？
+>对象池可以将对象存储在一块预先划出的内存区域中，当需要时可以取出使用，
+>而不需要每次都要实例化新的对象。一般在需要循环获取一个对象但是不关心对象的创造时机时的情况下可以使用。
+说明：对象池在很多语言中都有实现。所以回答不必拘泥于某种具体的语言，说出它的思想即可。
