--- a/Interview/Interview/网络.md
+++ b/Interview/Interview/网络.md
@@ -1,2 +1,47 @@
+# 网络
+1. 网络模型：
+>- TCP/IP五层：应用层、传输层、网络层、数据链路层、物理层
+>- 网络游戏开发中我们通常接触的是应用层（游戏逻辑，Socket处理）与传输层（TCP，UDP）
+
+2. 三次握手四次挥手：
+> 三次握手：客户端发起请求，服务端收到后返回（同步序号SYN=1和ACK=1），客户端把信号ACK+1，发送给服务端，服务端收到后，两边确定稳定连接。
+> 四次挥手：客户端发起断开连接请求（FIN），服务端收到后返回确认断开（ACK），然后服务器也发起断开连接请求（FIN），客户端收到后返回确认断开（ACK），两个可以调换顺序
+
+3. TCP\UDP区别：
+> TCP特点： 
+>- 传输可靠—保证顺序（滑动窗口）， 
+>- 不丢包（重传机制RDT），有拥塞控制 
+>- 三次握手，建立链接 
+>- 数据包没有限制 
+>- 可以依靠网络层去分帧
+
+> UDP特点： 
+>- 传输不可靠—不保证顺序，可能丢包， 
+>- 实现机制比较简单 
+>- 无连接，随时发送 
+>- DP协议一般要求包小于64K
+ 
+4. 关于TCP与UDP的选择 
+> 二者在不同的游戏里面都有广泛的应用，没有绝对好坏之分。TCP相比UDP数据安全可靠，但是需要建立链接，机制复杂带来额外的开销，在网络环境不好的情况下效果非常差。 
+>- TCP应用场景：网络条件较好，对安全可靠性有要求的 
+>- UDP应用场景：网络环境较差，要求响应速度比较高，安全性其次的
+
 1. KCP
-> KCP是一个快速可靠协议，能以比 TCP浪费10%-20%的带宽的代价，换取平均延迟降低 30%-40%，且最大延迟降低三倍的传输效果。纯算法实现，并不负责底层协议（如UDP）的收发，需要使用者自己定义下层数据包的发送方式，以 callback的方式提供给 KCP。 连时钟都需要外部传递进来，内部不会有任何一次系统调用。
+> KCP是一个快速可靠协议，能以比 TCP浪费10%-20%的带宽的代价，
+> 换取平均延迟降低 30%-40%，且最大延迟降低三倍的传输效果。
+> 纯算法实现，并不负责底层协议（如UDP）的收发，需要使用者自己定义下层数据包的发送方式，
+> 以 callback的方式提供给 KCP。 连时钟都需要外部传递进来，内部不会有任何一次系统调用。
+
+
+5.进程通信 
+1. 在同一个机器上，两个不同的进程之间有多种通信方式。
+如==管道，消息队列，信号量，信号，共享内存==等。（这属于操作系统基础知识） 
+1. 如果想在两个不同机器的进程之间通信，就需要用到Socket套接字。(当然他也可以用于同一个机器不同进程通信)
+
+6.socket 
+- 从宏观概念上理解，socket是一套基于TCP/IP协议封装的API。他处于网络应用层，给开发者提供方便的接口来快速的实现网络通信。网上有的朋友把他比喻成插座，处于两个机器上的两个进程想要通信，就需要各自创建一个插座，然后把自己插在这个插座上，这样你只要把信息通过这个插座传输过去就好了而不需要管插座里面有什么特殊的机制与技巧。当然，理论上你不用插座直接用手把线路焊接到一起也是没问题的，不过里面的电流过大断电机制什么的需要你自己想办法处理了。 
+- 从编程的角度来讲，socket是一个无符号整型变量，用来标识一个通信进程。两个进程想要通信必须要知道双方的ip地址和端口号，以及通信所采用的协议栈。socket就是和这些东西绑定的，socket编程可以使用unix接口，也可以使用windows的接口winSock。  
+参考链接： 
+- [socket编程到底是什么？](https://www.zhihu.com/question/29637351/answer/67610424) 
+- [谈谈socket 套接字](http://blog.csdn.net/farsight2009/article/details/53540546) 
+- [TCP/IP、Http、Socket的区别?](http://www.zhihu.com/question/39541968?utm_source=qq&utm_medium=social) 
