--- a/Interview/Interview/设计模式.md
+++ b/Interview/Interview/设计模式.md
@@ -1,3 +1,16 @@
+# 设计模式：
+- 单例、工厂、观察者、命令模式、状态机、对象池
+#### 单例
+- 主要解决：一个全局使用的类频繁地创建与销毁。确保全局只有一个实例。
+#### 工厂模式：
+设计一个接口，不同条件下创建不同实例，只能产出同种产品，比如联想鼠标、罗技鼠标
+#### 抽象工厂
+整合多个工厂，一个接口可以产出不同种产品、比如鼠标、也可以产出键盘
+#### 观察者：
+一对多的关系行为型模式，事件的发布和订阅，让多个观察者订阅事件，被观察者发布事件，通知所有观察者更新自己触发回调
+#### 命令模式：
+数据驱动行为型模式，将一个请求封装成一个对象，从而让你使用不同的请求把客户端参数化，对请求排队或者记录请求日志，可以提供命令的撤销和恢复功能。
+
 1. 面向对象的设计原则
 >- 单一职责原则：一个类，最好只做一件事，只有一个引起它的变化.
 >- 开放－封闭原则：对于扩展是开放的，对于更改是封闭的
