--- a/Interview/Interview/性能优化/优化.md
+++ b/Interview/Interview/性能优化/优化.md
@@ -4,3 +4,5 @@
 >- 释放AssetBundle占用的资源；AssetBundle资源包
 >- 降低模型的片面数，降低模型的骨骼数量，降低贴图的大小；
 >- 使用光照贴图，使用多层次细节(LOD)，使用着色器(Shader)，使用预设(Prefab)。
+
+[Unity高级知识点总结：性能优化与图形渲染进阶！](http://element-ui.cn/article/show-123392.aspx)
